versioned_docs/version-1.19/admin/index.mdx
---
title: Okteto Administration
description: Administering your Okteto instance
---

# Okteto Administration

## Learn more about Okteto's administration capabilities

Okteto's administration features are designed to empower administrators with robust tools and insights, ensuring efficient management, security, and optimized resource usage across your development environments. This section provides a comprehensive overview of various administration functionalities within Okteto.


## Explore Our Administration Features:

### Okteto Admin Dashboard
A web UI for your Okteto instance. Manage users, monitor activity, and oversee environments all in one place.

[Learn more about the Admin Dashboard →](admin/dashboard.mdx)

### Okteto Catalog
Discover and deploy applications from the Okteto Catalog. Simplify the setup of tools and services for your development teams with pre-configured environment templates.

[Explore the Okteto Catalog →](admin/catalog.mdx)

### Resource Cleanup
Optimize your environments with Okteto's Resource Cleanup feature. Automatically sleep unused resources to maintain a lean and efficient development workflow.

[Discover Resource Cleanup techniques →](admin/cleanup.mdx)

### Okteto Insights
Delve into Okteto Insights for detailed analytics on resource usage, build and deployment metrics, enabling data-driven decisions to boost productivity.

[Unveil the power of Okteto Insights →](admin/okteto-insights.mdx)

### Private Repositories
Securely manage your code with Private Repositories in Okteto. Configure Github or Private Keys to access your code providers.

[Find out how to use Private Repositories →](admin/private-repositories/github.mdx)

### Custom Installer Image for Your Pipelines
Tailor Okteto to fit your unique deployment needs with Custom Installer Images, allowing your tools, frameworks, or custom configurations.

[Learn about Custom Installer Images →](admin/custom-installer-image.mdx)

## Start Administering Like a Pro
Dive into each feature to unlock the full administrative potential of Okteto. Whether you're looking to streamline your setup, secure your projects, or gain valuable insights, Okteto Administration provides the tools you need to manage your cloud-native development environment effectively.