versioned_docs/version-1.39/admin/index.mdx
---
title: Okteto Administration
description: Administering your Okteto instance
---

# Okteto Administration

## Learn more about Okteto's administration capabilities

Okteto's administration features are designed to empower administrators with robust tools and insights, ensuring efficient management, security, and optimized resource usage across your development environments. This section provides a comprehensive overview of various administration functionalities within Okteto.


## Explore Our Administration Features:

### Okteto Admin Dashboard
A web UI for your Okteto instance. Manage users, monitor activity, and oversee environments all in one place.

[Learn more about the Admin Dashboard →](admin/dashboard.mdx)

### Okteto AI
Accelerate development with AI-powered agents that can write, test, and debug code in isolated Okteto environments. Enable your teams to scale development workflows with Claude Code-powered assistants that work alongside developers.

[Configure Okteto AI for your organization →](okteto-ai/okteto-ai-admin-config.mdx)

### Build Service
Monitor Okteto Build performance and resource utilization. View real-time metrics for CPU pressure, memory usage, IO pressure, and active builds across your BuildKit pods.
{/* Configure thresholds to optimize build performance and ensure consistent build times for your development teams. */}

[Learn more about the Build Service →](admin/build-service.mdx)

### Okteto Catalog
Discover and deploy applications from the Okteto Catalog. Simplify the setup of tools and services for your development teams with pre-configured environment templates.

[Explore the Okteto Catalog →](admin/catalog.mdx)

### Resource Manager
Automate your CPU and memory resource requests to ensure your workloads stay balanced and your cluster resources are optimized.

[Explore Resource Manager →](admin/resource-manager.mdx)

### Resource Cleanup
Optimize your environments with Okteto's Resource Cleanup feature. Automatically sleep unused resources to maintain a lean and efficient development workflow.

[Discover Resource Cleanup techniques →](admin/cleanup.mdx)

### Okteto Insights
Delve into Okteto Insights for detailed analytics on resource usage, build and deployment metrics, enabling data-driven decisions to boost productivity.

[Learn how to configure and use Okteto Insights →](admin/okteto-insights.mdx)

### Private Repositories
Securely manage your code with Private Repositories in Okteto. Configure Github or Private Keys to access your code providers.

[Find out how to use Private Repositories →](admin/private-repositories/github.mdx)

### SSH Known Hosts
Centrally manage trusted SSH hosts for Git operations used by Okteto’s installer jobs and remote executions. Prevent host verification failures and enforce organization-wide trust for Git providers.

[Configure SSH Known Hosts →](admin/ssh-known-hosts.mdx)

### Registry Credentials
Pull images from a private registry in addition to [Okteto's Container Registry](core/container-registry.mdx).

[Learn More about configuring your own Registry Credentials →](admin/registry-credentials/index.mdx)

### Cloud Credentials
Dynamically configure Okteto's connection to AWS and GCP, eliminating the need for developers to manage static credentials.

[Lean More about Cloud Credentials →](admin/cloud-credentials/index.mdx)

### Custom Installer Image for Your Pipelines
Tailor Okteto to fit your unique deployment needs with Custom Installer Images, allowing your tools, frameworks, or custom configurations.

[Learn about Custom Installer Images →](admin/custom-installer-image.mdx)

## Start Administering Like a Pro
Dive into each feature to unlock the full administrative potential of Okteto. Whether you're looking to streamline your setup, secure your projects, or gain valuable insights, Okteto Administration provides the tools you need to manage your cloud-native development environment effectively.
